k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: k8s-threetie-mainlb-73c240e86c-980289364.eu-north-1.elb.amazonaws.com #zone.dial12.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api #name of svc we defined in kubectl apply -f service.yaml
                port:   
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend #name of svc we defined in kubectl apply -f service.yaml
                port: 
                  number: 3000
